<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_vertical_details_allergy"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
		style="@style/AllergyTheme"
    tools:context="orionhealth.app.activities.main.AddAllergyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergy_information_header"
        style="@style/LightBlueHeader" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/LightBlueHorizontalDivider"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="10dp"
        android:rowCount="3">

        <TextView
            android:id="@+id/text_label_substance_allergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/text_label_substance" />

        <EditText
            android:id="@+id/edit_text_substance_allergy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:hint="@string/edit_text_substance_hint" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="10dp"
        android:rowCount="3">

        <TextView
            android:id="@+id/text_label_reaction_allergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/text_label_allergy_reaction" />

        <EditText
            android:id="@+id/edit_text_reaction_allergy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:hint="@string/edit_text_allergy_hint" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="10dp"
        android:rowCount="3">

        <TextView
            android:id="@+id/text_label_criticality_allergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/text_label_allergy_criticality" />


        <Spinner
            android:id="@+id/criticality_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />


    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_header"
				style="@style/LightBlueHeader" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/LightBlueHorizontalDivider" />

    <EditText
        android:id="@+id/edit_text_details_allergy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:hint="@string/edit_text_notes_hint"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="3" />

</LinearLayout>
