<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

        <LinearLayout
					  android:id="@+id/display_reasonForUse"
            android:layout_width="match_parent"
            android:layout_height="0dp"
						android:layout_weight="1"
            android:paddingLeft="10dp"
						android:paddingBottom="12dp"
            android:paddingRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/text_label_reasonForUse"
                android:id="@+id/display_medication_reasonForUse"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:id="@+id/list_reasonForUse"/>

        </LinearLayout>

        <LinearLayout
						android:id="@+id/display_Note"
            android:layout_width="match_parent"
            android:layout_height="0dp"
						android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/text_label_notes"
                android:id="@+id/display_medication_Note"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
								android:paddingBottom="10dp"
                android:id="@+id/list_Note"/>

        </LinearLayout>
	
				<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

				<Button
					 android:id="@+id/button_edit"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 android:layout_alignParentRight="true"
					 android:textAllCaps="false"
					 android:text="@string/button_edit"
					 android:textColor="#ffffff"
					 android:background="@drawable/button"
				   android:minHeight="0dp"
					 android:minWidth="0dp"
					 android:paddingTop="10dp"
				   android:paddingBottom="10dp"
					 android:paddingLeft="20dp"
					 android:paddingRight="20dp"
					 android:layout_marginBottom="5dp"/>

				</RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.7dp"
            android:background="@android:color/darker_gray"/>

</LinearLayout>